--- a/src/query/storages/table-meta/Cargo.toml
+++ b/src/query/storages/table-meta/Cargo.toml
@@ -16,6 +16,7 @@ common-config = { path = "../../config" }
 common-datablocks = { path = "../../datablocks" }
 common-datavalues = { path = "../../datavalues" }
 common-exception = { path = "../../../common/exception" }
+common-storages-cache = { path = "../cache" }
 
 async-trait = { version = "0.1.57", package = "async-trait-fn" }
 chrono = { workspace = true }
